# enquadramento-ideologico

./: .coverage  .gitignore  README.md  app.py  config.yaml  preprocessamento.py  pyproject.toml  requirements.txt
data/examples/: exemplo.txt  exemplo2.txt  exemplo3.txt  exemplo4.txt  exemplo5.txt
data/lexicons/: markers.txt  seeds.json
data/raw/: corpus.jsonl
outputs/figures/: exemplo2_grafo.html  exemplo3_grafo.html  exemplo4_grafo.html  exemplo5_grafo.html  exemplo_grafo.html
outputs/models/: model.json
scripts/: build_model.py  classify.py  generate_corpus.py
src/: config.py
src/analysis/: centrality.py  communities.py  filtering.py  shortest_path.py  traversal.py
src/datastructures/: graph.py  trie.py  union_find.py
src/graph_build/: cooccurrence.py  vocabulary.py  weighting.py
src/model/: anchoring.py  reference_model.py
src/parser/: lemmatize.py  pipeline.py  sanitize.py  stopwords.py  windows.py
src/scoring/: classifier.py  doc_graph.py
src/viz/: render.py  render_interactive.py
tests/: test_analysis.py  test_anchoring.py  test_datastructures.py  test_graph_build.py  test_integration.py  test_parser.py  test_scoring.py
