[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ideologia-grafos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7",
    "matplotlib>=3.8",
    "pyvis>=0.3",
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
